@@ -10,7 +10,30 @@ sysconf_DATA = LCDd.conf
 EXTRA_DIST = $(sysconf_DATA) CREDITS README.IRman contrib
 
 
+dist-hook:
+	rm -rf `find $(distdir)/contrib -name CVS`
+
+
 ## convenience targets
+
+.PHONY: $(SUBDIRS) install-server install-clients 
+	            
+$(SUBDIRS):
+	$(MAKE) -C $@
+
+clients server: shared	
+
+install-server: server
+	$(MAKE) -C server install
+	$(MAKE) -C docs install-server-man
+
+install-clients: clients
+	$(MAKE) -C clients install
+	$(MAKE) -C docs install-client-man
+
+
+.PHONY: install-html-guides install-html-developerguide install-html-userguide
+
 install-html-guides: install-html-developerguide install-html-userguide
 
 install-html-developerguide:
@@ -19,14 +42,14 @@ install-html-developerguide:
 install-html-userguide:
 	$(MAKE) -C docs $@
 
+
+.PHONY: dox topleveltags
+
 dox:
 	$(MAKE) -C docs $@
 
 topleveltags:
 	$(CTAGS) --format=1 -f - --languages=C --c-kinds=f --recurse=yes  server shared clients \
 	| perl -p -e 's/^([^\t]+)\t[^\t]+\/([^\t\/]+)\t(.*)$/$1\t$2\t$3/' > tags
-
-dist-hook:
-	rm -rf `find $(distdir)/contrib -name CVS`
 
 ## EOF	
