@@ -31,6 +31,16 @@ CLEANFILES = LCDd.8 lcdproc.1 lcdproc-config.5
 
 
 ## convenience targets
+
+.PHONY: install-server-man install-client-man
+
+install-server-man: install-man8 install-man5
+
+install-client-man: install-man1 install-man5
+
+
+.PHONY: install-html-guides install-html-developerguide install-html-userguide
+
 install-html-guides: install-html-developerguide install-html-userguide
 
 install-html-developerguide:
