@@ -57,6 +57,7 @@ v.0.5dev (ongoing development)
  + picolcd driver: support to send IR commands to LIRC (Jack Cleaver)
  + picolcd driver: support for 20x4 picoLCDs (Nicu Pavel)
  + hd44780 driver: new ConnectionType uss720 (Eric Pooch)
+ * new make targets to compile & install server & clients separately
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
